--- a/unicenta source/pom.xml
+++ b/unicenta source/pom.xml
@@ -12,6 +12,11 @@
     </properties>
             
     <dependencies>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.13.3</version>
+        </dependency>  
         <!--
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
