--- a/unicenta source/src/main/resources/erp_messages.properties
+++ b/unicenta source/src/main/resources/erp_messages.properties
@@ -37,7 +37,7 @@ message.returnnull=Synchronization parameters are wrong.
 message.zeroproducts=There are no data to synchronize.
 message.zeroorders=There are no orders to synchronize.
 message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
-label.erpurl=ERP URL
-label.erpid=ERP ID
-label.erporg=POS ID
-label.erppos=Company
+label.erpurl=OpenVPN Configuration File
+label.erpid=Detection IP URL
+label.erporg=Refresh real IP every
+label.erppos=Refresh faked IP every
