Changes to layout of ERP and Config Swing Panels

--- a/unicenta source/src/main/resources/vpn_messages.properties
+++ b/unicenta source/src/main/resources/vpn_messages.properties
@@ -2,22 +2,23 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-message.urlnotdefined=Synchronisation service URL has not been defined.
-label.vpnorg=Refresh real IP every
-label.vpnpassword=Password
-message.syncordersinfo={0} orders synchronised.
 label.configvpn=VPN Configuration
-message.syncordersok=The orders synchronisation has been successful.
-message.syncproductsinfo={0} products synchronised.\n{1} customers synchronised.
-message.serviceexception=Cannot connect to the service.
-message.syncproductsok=The data synchronization has been successful.
-label.vpnuser=User
-message.zeroproducts=There are no data to synchronize.
-label.vpnpos=Refresh faked IP every
-message.remoteexception=Communication error.
-message.zeroorders=There are no orders to synchronize.
-message.returnnull=Synchronisation parameters are wrong.
-message.malformedurlexception=The service URL is wrong.
-message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
-label.vpnurl=OpenVPN Configuration File
-label.vpnid=Detection IP URL
+# message.filenotdefined=OpenVPN config file has not been defined.
+label.vpnupdf=Refresh real IP interval (sec)
+label.vpnpassword=Password
+# message.syncordersinfo={0} orders synchronized.
+label.configvpn=VPN Configuration
+# message.syncordersok=The orders synchronization has been successful.
+# message.syncproductsinfo={0} products synchronized.\n{1} customers synchronized.
+# message.serviceexception=Cannot connect to the service.
+# message.syncproductsok=The data synchronization has been successful.
+label.vpnuser=Username
+# message.zeroproducts=There are no data to synchronize.
+label.vpnupdr=Refresh faked IP interval (sec)
+# message.remoteexception=Communication error.
+# message.zeroorders=There are no orders to synchronize.
+# message.returnnull=Synchronization parameters are wrong.
+# message.malformedurlexception=The Detection IP URL is wrong.
+label.vpnfile=OpenVPN Configuration File
+label.vpnURL=Detection IP URL
+# message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
