--- a/unicenta source/src/main/resources/erp_messages.properties
+++ b/unicenta source/src/main/resources/erp_messages.properties
@@ -23,7 +23,7 @@
 #    along with uniCenta oPOS.  If not, see <http://www.gnu.org/licenses/>.
 
 label.configerp=ERP configuration
-label.erpuser=User
+label.erpuser=Username
 label.erppassword=Password
 message.urlnotdefined=Synchronization service URL has not been defined.
 message.syncordersok=The orders synchronization has been successful.
@@ -37,7 +37,7 @@ message.returnnull=Synchronization parameters are wrong.
 message.zeroproducts=There are no data to synchronize.
 message.zeroorders=There are no orders to synchronize.
 message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
-label.erpurl=Services URL
-label.erpid=Entity code
-label.erporg=Organization code
-label.erppos=POS code
+label.erpurl=ERP URL
+label.erpid=ERP ID
+label.erporg=POS ID
+label.erppos=Company
