--- a/unicenta source/src/main/resources/erp_messages.properties
+++ b/unicenta source/src/main/resources/erp_messages.properties
@@ -40,4 +40,4 @@ message.propsnotdefined=The synchronization properties resource "openbravo.prope
 label.erpurl=ERP URL
 label.erpid=ERP ID
 label.erporg=POS ID
-label.erppos=Company
+label.erppos=Company Number
