--- a/unicenta source/src/main/resources/vpn_messages.properties
+++ b/unicenta source/src/main/resources/vpn_messages.properties
@@ -20,5 +20,5 @@ label.vpnupdr=Refresh faked IP interval (sec)
 # message.returnnull=Synchronization parameters are wrong.
 # message.malformedurlexception=The Detection IP URL is wrong.
 label.vpnfile=OpenVPN Configuration File
-label.vpnURL=Detection IP URL
+label.vpnURL=IP Detection URL
 # message.propsnotdefined=The synchronization properties resource "openbravo.properties" has not been defined.
